--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+@import url(libs/ekko-lightbox.css);
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -5992,3 +5993,15 @@ footer {
 @media (max-width: 490px) {
   footer {
     margin-bottom: 160px; } }
+.photos {
+  margin: 0;
+  padding: 0; }
+
+.photos li {
+  list-style: none;
+  float: left;
+  margin: 5px;
+  width: 23%; }
+
+.photos img {
+  width: 100%; }
