--- a/css/styles.css
+++ b/css/styles.css
@@ -5798,6 +5798,13 @@ button.close {
 body {
   background-color: #141a21; }
 
+article {
+  border-bottom: 2px dashed white;
+  border-width: 50%;
+  width: 70%;
+  margin-bottom: 10px;
+  margin-top: 10px; }
+
 b {
   color: #a1583b; }
 
@@ -5830,8 +5837,10 @@ a:visited {
 
 .myapp {
   z-index: -1;
-  margin-left: 10px;
   margin-left: 10px; }
+
+.container {
+  margin-right: 50px; }
 
 .about h2 {
   margin-left: 15px; }
